k8s.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: muffin-currency
  labels:
    app: muffin-currency
spec:
  replicas: 2
  selector:
    matchLabels:
      app: muffin-currency
  template:
    metadata:
      labels:
        app: muffin-currency
    spec:
      containers:
        - name: muffin-currency
          image: aadan1lov/muffin-currency:1.0.0
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /rate?from=PLAIN&to=CHOKOLATE
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /rate?from=PLAIN&to=CHOKOLATE
              port: 8080
            initialDelaySeconds: 2
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: muffin-currency
spec:
  selector:
    app: muffin-currency
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: muffin-wallet
spec:
  type: ClusterIP
  selector:
    app: muffin-wallet
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: muffin-wallet
  labels:
    app: muffin-wallet
spec:
  replicas: 3
  selector:
    matchLabels:
      app: muffin-wallet
  template:
    metadata:
      labels:
        app: muffin-wallet
    spec:
      volumes:
        - name: application-config-volume
          configMap:
            name: muffin-wallet
      containers:
        - name: muffin-wallet
          image: aadan1lov/muffin-wallet:1.1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: application-config-volume
              mountPath: /app/config
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8081
            initialDelaySeconds: 75
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8081
            initialDelaySeconds: 75
            periodSeconds: 5

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: muffin-wallet
spec:
  ingressClassName: nginx
  rules:
    - host: muffin-wallet.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: muffin-wallet
                port:
                  number: 80
